manifests/deployment-details-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details-v2
  labels:
    app: details
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
      version: v2
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: details
        version: v2
    spec:
      containers:
      - name: details
        image: quay.io/jkap/details:v2
        imagePullPolicy: IfNotPresent
