manifests/deployment-productpage-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productpage-v2
  labels:
    app: productpage
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage
      version: v2
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: productpage
        version: v2
    spec:
      containers:
      - name: productpage
        image: quay.io/jkap/productpage:v2
        imagePullPolicy: IfNotPresent
