manifests/virtualservice-canary-details-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details-v2
spec:
  hosts:
  - details
  http:
  - route:
    - destination:
        host: details
        subset: v2
      weight: 10
    - destination:
        host: details
        subset: v1
      weight: 45
    - destination:
        host: details
        subset: v2
      weight: 45
