manifests/virtualservice-canary-productpage-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage-v2
spec:
  hosts:
  - productpage
  http:
  - route:
    - destination:
        host: productpage
        subset: v2
      weight: 10
    - destination:
        host: productpage
        subset: v1
      weight: 90
